# Estructura-de-Datos

PRACTICAS/PRACTICA1/p72losaj/kmeans/: CMakeLists.txt  kmeans.cpp  kmeans.hpp  pattern.cpp  pattern.hpp
PRACTICAS/PRACTICA10/p72losaj/graph_traversal/: CMakeLists.txt  city.cpp  graph_traversals.hpp  graph_utils.hpp
PRACTICAS/PRACTICA11/p72losaj/graph_minimum_spanning_tree/: CMakeLists.txt  city.cpp  disjointsets.hpp  kruskal_algorithm.hpp  prim_algorithm.hpp
PRACTICAS/PRACTICA12/p72losaj/maze_solver/: CMakeLists.txt  a_star_algorithm.hpp  graph_utils.hpp  maze_solver.cpp  maze_solver.hpp
PRACTICAS/PRACTICA13/p72losaj/graph_floyd/: CMakeLists.txt  city.cpp  floyd_algorithm.hpp  graph_utils.hpp
PRACTICAS/PRACTICA2/p72losaj/check_brackets/: CMakeLists.txt  stack.hpp  test_check_brackets.cpp
PRACTICAS/PRACTICA3/p72losaj/packet_processor/: CMakeLists.txt  packet_processor.cpp  packet_processor.hpp  queue.hpp
PRACTICAS/PRACTICA4/p72losaj/binary_tree/: CMakeLists.txt  btree.hpp  btree_utils.hpp
PRACTICAS/PRACTICA5/p72losaj/make_heap/: CMakeLists.txt  heap.hpp  heapsort.hpp
PRACTICAS/PRACTICA6/p72losaj/avl-tree/: avltree.hpp
PRACTICAS/PRACTICA7/p72losaj/avl-tree/: CMakeLists.txt  avltree.hpp
PRACTICAS/PRACTICA9/p72losaj/dos_detector/: dos_detector.cpp  dos_detector.hpp  hash_table.hpp  ip_utils.hpp
